--- a/Ciência_de_Dados_Lista_1.ipynb
+++ b/Ciência_de_Dados_Lista_1.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Ciência de Dados Lista",
+      "name": "Ciência de Dados Lista 1",
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
@@ -30,7 +30,7 @@
         "id": "P8STq4zwvT4e"
       },
       "source": [
-        "4. Crie um conjunto de dados com duas variáveis V1 e V2, tal que:"
+        "Crie um conjunto de dados com duas variáveis V1 e V2, tal que:"
       ]
     },
     {
@@ -46,7 +46,7 @@
         "\n",
         "data = pd.read_csv('https://raw.githubusercontent.com/hecpinheiro/Ciencia-de-dados-UFAL/main/data.csv')\n"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LIyWL0C1vilb",
-        "outputId": "4423718a-a2d5-4cf7-a61a-bb58439856a9"
+        "outputId": "ea6c8a1d-84b0-475b-9a35-c41daf808ec3"
       },
       "source": [
         "mediaV1 = np.mean(data['V1'])\n",
@@ -74,7 +74,7 @@
         "print(\"Média de V1:\", mediaV1)\n",
         "print(\"Mediana de V1:\", medianaV1)\n"
       ],
-      "execution_count": 12,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
         "print(\"Média de V2:\", mediaV2)\n",
         "print(\"Mediana de V2:\", medianaV2)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "id": "vsgxzoJ1wUsc"
       },
       "source": [
-        "5. Baseando-se no conjunto de dados criado na questão 4, crie uma função\n",
+        "Baseando-se no conjunto de dados criado na questão 4, crie uma função\n",
         "em Python que:"
       ]
     },
@@ -205,6 +205,78 @@
             "tags": [],
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UwtD6RvtSUJi"
+      },
+      "source": [
+        "b. Verificar se as variáveis seguem uma distribuição Normal (use teste\n",
+        "de hipótese)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yHLi5kg5Sw1p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed5b3c87-c46c-4b04-d255-cc5aa736f7c9"
+      },
+      "source": [
+        "significancia = 0.05\n",
+        "stat_test, p_valor = normaltest(data.V1)\n",
+        "\n",
+        "p_valor < significancia"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5L4rcUGBTyEJ",
+        "outputId": "fc63fec9-25f7-479b-97d2-2c7b522c8362"
+      },
+      "source": [
+        "significancia = 0.05\n",
+        "stat_test, p_valor = normaltest(data.V2)\n",
+        "\n",
+        "p_valor < significancia"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     }
